--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 ---
-version: '2'
+version: '3'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper
@@ -20,4 +20,13 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'  
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'
+
+  db:
+    image: postgres
+    environment:
+       POSTGRES_PASSWORD: password
+    volumes:
+       - .:/var/lib/postgresql
+    ports:
+       - "5432:5432"
